--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .Rhistory
 .RData
 .Ruserdata
+AutoEDApackages_EDA0.nb.html
+AutoEDApackages_EDA0_files/
+dataMaid_sfanWQwide2.Rmd
+dataMaid_sfanWQwide2.html
